--- a/packages/fastapi-agent/package.json
+++ b/packages/fastapi-agent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stacksleuth/fastapi-agent",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Python FastAPI performance monitoring agent - Route-level tracing, WebSocket integration, request/response profiling, middleware performance analysis, and real-time API metrics collection.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -20,19 +20,20 @@
     "performance:test": "clinic doctor -- node benchmarks/memory-test.js"
   },
   "keywords": [
-    "fastapi",
-    "python",
     "performance",
-    "profiling",
     "monitoring",
-    "backend",
-    "observability",
-    "apm",
+    "profiling",
     "stacksleuth",
-    "real-time",
+    "observability",
     "analytics",
     "optimization",
-    "instrumentation"
+    "instrumentation",
+    "apm",
+    "real-time",
+    "fastapi",
+    "python",
+    "async",
+    "websocket"
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
@@ -57,10 +58,11 @@
   },
   "license": "MIT",
   "author": {
-    "name": "Jack",
-    "url": "https://github.com/Jack-GitHub12"
+    "name": "StackSleuth Team",
+    "email": "team@stacksleuth.com",
+    "url": "https://github.com/Jack-GitHub12/StackSleuth"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth#readme",
+  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/fastapi-agent#readme",
   "bugs": {
     "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
   },
