--- a/packages/supabase-agent/package.json
+++ b/packages/supabase-agent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stacksleuth/supabase-agent",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Specialized Supabase performance monitoring agent - Real-time database tracking, auth performance analysis, edge function monitoring, and comprehensive cloud database optimization.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -20,19 +20,16 @@
     "performance:test": "clinic doctor -- node benchmarks/memory-test.js"
   },
   "keywords": [
-    "supabase",
-    "database",
-    "realtime",
     "performance",
-    "profiling",
     "monitoring",
-    "observability",
-    "apm",
+    "profiling",
     "stacksleuth",
-    "real-time",
+    "observability",
     "analytics",
     "optimization",
-    "instrumentation"
+    "instrumentation",
+    "apm",
+    "real-time"
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
@@ -60,10 +57,11 @@
   },
   "license": "MIT",
   "author": {
-    "name": "Jack",
-    "url": "https://github.com/Jack-GitHub12"
+    "name": "StackSleuth Team",
+    "email": "team@stacksleuth.com",
+    "url": "https://github.com/Jack-GitHub12/StackSleuth"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth#readme",
+  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/supabase-agent#readme",
   "bugs": {
     "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
   },
