--- a/packages/laravel-agent/package.json
+++ b/packages/laravel-agent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stacksleuth/laravel-agent",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Comprehensive Laravel performance monitoring agent - Eloquent ORM optimization, route performance analysis, middleware tracking, job queue monitoring, and advanced cache performance metrics.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -20,20 +20,20 @@
     "performance:test": "clinic doctor -- node benchmarks/memory-test.js"
   },
   "keywords": [
-    "laravel",
-    "php",
-    "backend",
     "performance",
-    "profiling",
     "monitoring",
-    "eloquent",
-    "observability",
-    "apm",
+    "profiling",
     "stacksleuth",
-    "real-time",
+    "observability",
     "analytics",
     "optimization",
-    "instrumentation"
+    "instrumentation",
+    "apm",
+    "real-time",
+    "laravel",
+    "php",
+    "eloquent",
+    "artisan"
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
@@ -60,10 +60,11 @@
   },
   "license": "MIT",
   "author": {
-    "name": "Jack",
-    "url": "https://github.com/Jack-GitHub12"
+    "name": "StackSleuth Team",
+    "email": "team@stacksleuth.com",
+    "url": "https://github.com/Jack-GitHub12/StackSleuth"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth#readme",
+  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/laravel-agent#readme",
   "bugs": {
     "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
   },
