--- a/packages/mysql-agent/package.json
+++ b/packages/mysql-agent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stacksleuth/mysql-agent",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Advanced MySQL performance monitoring agent - Query optimization, index analysis, connection pool monitoring, slow query detection, and real-time database performance insights.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -18,18 +18,20 @@
     "clean": "rm -rf dist"
   },
   "keywords": [
-    "mysql",
-    "database",
     "performance",
-    "profiling",
     "monitoring",
-    "observability",
-    "apm",
+    "profiling",
     "stacksleuth",
-    "real-time",
+    "observability",
     "analytics",
     "optimization",
-    "instrumentation"
+    "instrumentation",
+    "apm",
+    "real-time",
+    "mysql",
+    "sql",
+    "database",
+    "queries"
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
@@ -55,10 +57,11 @@
   },
   "license": "MIT",
   "author": {
-    "name": "Jack",
-    "url": "https://github.com/Jack-GitHub12"
+    "name": "StackSleuth Team",
+    "email": "team@stacksleuth.com",
+    "url": "https://github.com/Jack-GitHub12/StackSleuth"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth#readme",
+  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/mysql-agent#readme",
   "bugs": {
     "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
   },
