--- a/packages/redis-agent/package.json
+++ b/packages/redis-agent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stacksleuth/redis-agent",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Advanced Redis performance monitoring agent - Command-level tracking, memory usage analysis, connection pooling optimization, slow query detection, and real-time cache performance metrics.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -20,18 +20,20 @@
     "performance:test": "clinic doctor -- node benchmarks/memory-test.js"
   },
   "keywords": [
-    "redis",
     "performance",
-    "profiling",
     "monitoring",
-    "database",
-    "observability",
-    "apm",
+    "profiling",
     "stacksleuth",
-    "real-time",
+    "observability",
     "analytics",
     "optimization",
-    "instrumentation"
+    "instrumentation",
+    "apm",
+    "real-time",
+    "redis",
+    "cache",
+    "memory",
+    "database"
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
@@ -67,10 +69,11 @@
   },
   "license": "MIT",
   "author": {
-    "name": "Jack",
-    "url": "https://github.com/Jack-GitHub12"
+    "name": "StackSleuth Team",
+    "email": "team@stacksleuth.com",
+    "url": "https://github.com/Jack-GitHub12/StackSleuth"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth#readme",
+  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/redis-agent#readme",
   "bugs": {
     "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
   },
