--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,10 +16,10 @@
   },
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
+    "chalk": "5.4.1",
     "commander": "^11.0.0",
-    "chalk": "^4.1.2",
-    "ora": "^5.4.1",
     "inquirer": "^8.2.5",
+    "ora": "^5.4.1",
     "ws": "^8.0.0"
   },
   "devDependencies": {
