--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,9 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc -w",
-    "test": "jest",
-    "test:ci": "jest --coverage --ci",
+    "dev": "tsc --watch",
+    "test": "jest --passWithNoTests",
     "lint": "eslint src/**/*.ts",
     "clean": "rm -rf dist"
   },
