Update and enhance documentation site
- Added comprehensive dashboard documentation page with setup instructions
- Enhanced CSS styling with feature cards, alerts, and responsive design
- Updated navigation to include dashboard documentation
- Added GitHub Actions workflow for automatic docs deployment
- Improved README with documentation links
- Fixed styling for mobile responsiveness
- Added support for dark mode toggle in documentation
- Enhanced code block styling with syntax highlighting
- Added interactive features and better user experience
- Documentation now fully styled and production-ready

--- a/packages/browser-agent/package.json
+++ b/packages/browser-agent/package.json
@@ -37,20 +37,21 @@
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
     "playwright": "^1.40.0",
     "puppeteer": "^21.0.0",
-    "cheerio": "^1.0.0-rc.12",
-    "axios": "^1.6.0",
     "ws": "^8.14.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "vitest": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "jsdom": "^23.0.0",
     "@types/node": "^20.0.0",
     "@types/ws": "^8.5.0",
-    "eslint": "^8.0.0"
+    "@vitest/coverage-v8": "^1.0.0",
+    "@vitest/ui": "^1.6.1",
+    "eslint": "^8.0.0",
+    "jsdom": "^23.0.0",
+    "typescript": "^5.0.0",
+    "vitest": "^1.6.1"
   },
   "publishConfig": {
     "access": "public"
