--- a/packages/browser-extension/package.json
+++ b/packages/browser-extension/package.json
@@ -37,19 +37,20 @@
     "chrome"
   ],
   "dependencies": {
-    "@stacksleuth/core": "^0.2.1",
-    "@stacksleuth/browser-agent": "^0.2.1"
+    "@stacksleuth/browser-agent": "^0.2.1",
+    "@stacksleuth/core": "^0.2.1"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "vitest": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "jsdom": "^23.0.0",
-    "@types/node": "^20.0.0",
     "@types/chrome": "^0.0.246",
-    "clinic": "^12.0.0",
+    "@types/node": "^20.0.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "@vitest/ui": "^1.6.1",
     "benchmark": "^2.1.4",
-    "eslint": "^8.0.0"
+    "clinic": "^12.0.0",
+    "eslint": "^8.0.0",
+    "jsdom": "^23.0.0",
+    "typescript": "^5.0.0",
+    "vitest": "^1.6.1"
   },
   "publishConfig": {
     "access": "public"
