--- a/packages/laravel-agent/package.json
+++ b/packages/laravel-agent/package.json
@@ -41,14 +41,15 @@
     "ws": "^8.14.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "vitest": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
     "@types/node": "^20.0.0",
     "@types/ws": "^8.5.0",
-    "clinic": "^12.0.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "@vitest/ui": "^1.6.1",
     "benchmark": "^2.1.4",
-    "eslint": "^8.0.0"
+    "clinic": "^12.0.0",
+    "eslint": "^8.0.0",
+    "typescript": "^5.0.0",
+    "vitest": "^1.6.1"
   },
   "publishConfig": {
     "access": "public"
