--- a/packages/redis-agent/package.json
+++ b/packages/redis-agent/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:ci": "jest --coverage --ci",
     "lint": "eslint src/**/*.ts",
     "clean": "rm -rf dist",
