--- a/packages/session-replay/package.json
+++ b/packages/session-replay/package.json
@@ -35,14 +35,15 @@
     "@stacksleuth/core": "^0.2.1"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "vitest": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "jsdom": "^23.0.0",
     "@types/node": "^20.0.0",
-    "clinic": "^12.0.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "@vitest/ui": "^1.6.1",
     "benchmark": "^2.1.4",
-    "eslint": "^8.0.0"
+    "clinic": "^12.0.0",
+    "eslint": "^8.0.0",
+    "jsdom": "^23.0.0",
+    "typescript": "^5.0.0",
+    "vitest": "^1.6.1"
   },
   "publishConfig": {
     "access": "public"
