--- a/packages/supabase-agent/package.json
+++ b/packages/supabase-agent/package.json
@@ -33,16 +33,17 @@
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": ">=2.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "vitest": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
     "@types/node": "^20.0.0",
-    "clinic": "^12.0.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "@vitest/ui": "^1.6.1",
     "benchmark": "^2.1.4",
-    "eslint": "^8.0.0"
+    "clinic": "^12.0.0",
+    "eslint": "^8.0.0",
+    "typescript": "^5.0.0",
+    "vitest": "^1.6.1"
   },
   "peerDependencies": {
     "@supabase/supabase-js": ">=2.0.0"
