--- a/packages/svelte-agent/package.json
+++ b/packages/svelte-agent/package.json
@@ -36,14 +36,15 @@
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
-    "svelte": "^4.0.0"
+    "svelte": ">=3.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "vitest": "^1.0.0",
     "@vitest/coverage-v8": "^1.0.0",
+    "@vitest/ui": "^1.6.1",
+    "eslint": "^8.0.0",
     "jsdom": "^23.0.0",
-    "eslint": "^8.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^1.6.1"
   },
   "peerDependencies": {
     "svelte": ">=3.0.0"
