--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
     - name: Run tests
       run: npm test --workspaces --if-present
       continue-on-error: true
+      timeout-minutes: 10
 
     - name: Run linting
       run: npm run lint --if-present
